--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ input{
 </div>
 </div>
 
-<script>
+<script src="https://telegram.org/js/telegram-web-app.js?59">
 // Telegram WebApp initialization
 if(window.Telegram && window.Telegram.WebApp){
     window.Telegram.WebApp.ready();
