--- a/index.html
+++ b/index.html
@@ -162,7 +162,8 @@ input{
 </div>
 </div>
 
-<script src="https://telegram.org/js/telegram-web-app.js?59">
+<script src="https://telegram.org/js/telegram-web-app.js?59"></script>
+<script>
 // Telegram WebApp initialization
 if(window.Telegram && window.Telegram.WebApp){
     window.Telegram.WebApp.ready();
