--- a/index.html
+++ b/index.html
@@ -170,6 +170,15 @@ if(window.Telegram && window.Telegram.WebApp){
     window.Telegram.WebApp.expand();
 }
 
+const counter = document.getElementById("counter");
+const timer = document.getElementById("timer");
+const replayInfo = document.getElementById("replayInfo");
+const answer = document.getElementById("answer");
+const timeUpModal = document.getElementById("timeUpModal");
+const score = document.getElementById("score");
+const list = document.getElementById("list");
+
+
 const synth = speechSynthesis;
 const MAX_REPLAY = 3;
 
