--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@ Score: ${correct}/${items.length} (${percent}%)
 
 Try it yourself! 👇`;
     
-    const url = 'https://t.me/share/url?url=' + encodeURIComponent('https://t.me/YourBotUsername') + '&text=' + encodeURIComponent(text);
+    const url = 'https://t.me/share/url?url=' + encodeURIComponent('https://t.me/psexam_bot') + '&text=' + encodeURIComponent(text);
     tg.openTelegramLink(url);
 }
 
